--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,9 @@
          url('/assets/fonts/east-sea-dokdo-v20-latin/east-sea-dokdo-v20-latin-regular.woff') format('woff'), /* Modern Browsers */
          url('/assets/fonts/east-sea-dokdo-v20-latin/east-sea-dokdo-v20-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
          url('/assets/fonts/east-sea-dokdo-v20-latin/east-sea-dokdo-v20-latin-regular.svg#EastSeaDokdo') format('svg'); /* Legacy iOS */
-  }
+
+    font-display: swap;
+}
 
 
   /* roboto-regular - latin */
@@ -27,7 +29,9 @@
          url('/assets/fonts/roboto-v30-latin/roboto-v30-latin-regular.woff') format('woff'), /* Modern Browsers */
          url('/assets/fonts/roboto-v30-latin/roboto-v30-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
          url('/assets/fonts/roboto-v30-latin/roboto-v30-latin-regular.svg#Roboto') format('svg'); /* Legacy iOS */
-  }
+         
+    font-display: swap;
+}
 
 /* inter-regular - latin */
 @font-face {
@@ -41,7 +45,9 @@
          url('/assets/fonts/inter-v12-latin/inter-v12-latin-regular.woff') format('woff'), /* Modern Browsers */
          url('/assets/fonts/inter-v12-latin/inter-v12-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
          url('/assets/fonts/inter-v12-latin/inter-v12-latin-regular.svg#Inter') format('svg'); /* Legacy iOS */
-  }
+         
+    font-display: swap;
+}
 
 
 
